# anm-hass

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  coverage.xml  docker-compose.yml  hacs.json  pyproject.toml  pytest.ini  requirements-test.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
custom_components/anm/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/anm/translations/: en.json  it.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py
tests/fixtures/api_responses/: CaricaElencoPaline.xml  CaricaPrevisioniNuova_1234.json  CaricaPrevisioniNuova_2103.json  CaricaPrevisioniNuova_5678.json
