[project]
name = "anm-hass-integration"
version = "1.0.0"
description = "Home Assistant integration for ANM (Azienda Napoletana Mobilita) public transport"
readme = "README.md"
requires-python = ">=3.13.2"
authors = [
    {name = "LBRDAN", email = "hello@lbrdan.one"}
]
dependencies = [
    "aiohttp>=3.8.1"
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint =[
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "homeassistant>=2025.12.0",
    "aioresponses>=0.7.0",
    "pytest>=7.4.0",
    "pytest-aiohttp>=1.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "coverage>=7.0.0"
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = 'py313'

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C",
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-line-length = 150

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["custom_components"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
